[gd_scene load_steps=8 format=3 uid="uid://b56b4nxbv1o47"]

[ext_resource type="Theme" uid="uid://bih8b27ydr430" path="res://Themes/MainTheme.theme" id="1_btkds"]
[ext_resource type="Script" path="res://Scripts/GUILogic/MassageBox.gd" id="2_n6tlg"]
[ext_resource type="AudioStream" uid="uid://d0a741yu1po0s" path="res://Sounds/CharClick.mp3" id="3_27fp5"]
[ext_resource type="Shader" path="res://Shaders/RetroShader3.gdshader" id="3_mdyvw"]
[ext_resource type="Texture2D" uid="uid://sa4yjxup5tqe" path="res://Textures/MrS_logo.png" id="4_0g4hu"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_0s6mu"]
color = Color(0, 1, 0, 1)
grow_begin = 4.0
grow_end = 4.0
thickness = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n7pbu"]
shader = ExtResource("3_mdyvw")
shader_parameter/overlay = false
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.059
shader_parameter/noise_opacity = 0.851
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.0
shader_parameter/aberration = 4.75e-08
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.1
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="MassageBox" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_btkds")
script = ExtResource("2_n6tlg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.0
offset_top = -322.0
offset_right = 306.0
offset_bottom = 322.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MainContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/MainContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/MarginContainer/MainContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "Заголовок"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/MainContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = " X "

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/MainContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_0s6mu")

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/MainContainer"]
material = SubResource("ShaderMaterial_n7pbu")
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_0g4hu")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/MarginContainer/MainContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
bbcode_enabled = true
text = "Текст окна"
visible_characters = 10

[node name="ContinueButton" type="Button" parent="Panel/MarginContainer/MainContainer"]
layout_mode = 2
focus_mode = 0
text = "Продолжить"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_27fp5")
pitch_scale = 0.6

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="pressed" from="Panel/MarginContainer/MainContainer/HBoxContainer/CloseButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/MainContainer/ContinueButton" to="." method="_on_continue_pressed"]
